--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
   --heading-bg: #252525;
   --purple: #470c68;
   --light-purple: #7c68a6;
+  --dark: #252525;
   --dark-blue: #003057;
   --dark-green: #034638;
   --blue: #007298;
