--- a/styles/in_common.css
+++ b/styles/in_common.css
@@ -351,6 +351,10 @@ header {
   text-decoration: underline;
 }
 
+.menu-link-active {
+  text-decoration: underline;
+}
+
 .mobile-menu {
   display: flex;
   width: 90%;
@@ -522,22 +526,22 @@ ul li {
 
 .newsletter-wrapper {
   width: 100%;
-  background-image: url(../images/newsletter_mobile.jpg);
+  background-color: var(--dark);
+  /* background-image: url(../images/newsletter_mobile.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: 2rem;
-  border-radius: 100px 0 0 0;
+  margin-top: 2rem; */
+  /* border-radius: 100px 0 0 0; */
 }
 
-.blur {
+/* .blur {
   position: absolute;
   margin: 0 auto;
   background-color: #ffffff80;
   margin-bottom: 0;
-  /* height: 200px; */
   position: relative;
   bottom: 0;
-}
+} */
 
 .newsletter-section {
   width: 90%;
@@ -546,6 +550,7 @@ ul li {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-top: 3rem;
   padding: 3rem 0 4rem 0;
 }
 
@@ -572,6 +577,7 @@ ul li {
 
 .newsletter-label {
   font-weight: bold;
+  color: #fff;
 }
 
 #newsletter-input:focus {
@@ -826,10 +832,10 @@ footer {
   grid-template-rows: auto auto;
 } */
 
-  .newsletter-wrapper {
+  /* .newsletter-wrapper {
     background-image: url(../images/newsletter.jpg);
     border-radius: 0 200px 0 0;
-  }
+  } */
 
   /* Footer
 --------------------*/
